* 2013-08-12 - thorben.betten@open-xchange.com

 - Fix for bug 28003 + 28192: Use proper primary-key-dependent SQL statement + fixed SQL query

* 2013-08-09 - marcus.klein@open-xchange.com

 - Fix for bug 24624: White listed our known clients to have their logins recorded always. Testing the client login parameter for
   self-defeating values.

* 2013-08-09 - thorben.betten@open-xchange.com

 - Fix for bug 28110: Show an appropriate hint to perform a logout&login cycle after successful password-change

* 2013-08-08 - thorben.betten@open-xchange.com

 - Fix for bug 28139: Invalidate login-info cache entries, too, when invalidating context cachings
 - Fix for bug 28119: Return a non-zero return code for 'checkconsistency' CLI if invocation fails
 - Fix for bug 28137: Proper help text for 'changeaccessglobal' CLI
 - Fix for bug 28141: Added needed 'com.openexchange.java' bundle to CLIs
 - Fix for bug 28143: Re-connect MailAccess instance if read timed out
 - Fix for bug 28144: Fixed possible 'java.lang.IndexOutOfBoundsException' when parsing CSS content
 - Fix for bug 28145: Set proper class path for 'usercopy' CLI
 - Fix for bug 28147: Lowered log level to DEBUG
 - Fix for bug 28153: Obfuscate debug loggings if it contains sensitive content
 - Fix for bug 28126: Aligned CLI's usage text to method's purpose

* 2013-08-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 28116: Removed duplicate configuration properties 

* 2013-08-07 - martin.herfurth@open-xchange.com

 - Fix for bug 26475: Bad calculation of recurrence date position of a change exception on delete.
 - Fix for bug 27238: Handle empty organizer field on delete.
 - Fix for bug 28059: Remove Appointments in shared folder if organizer is external.

* 2013-08-07 - thorben.betten@open-xchange.com

 - Fix for bug 27911: Fixed possible ArrayIndexOutOfBoundsException when transferring bytes from ByteChunk to a byte array
 - Fix for bug 28099: Check for missing members in SOAP request