@@ -5,6 +5,7 @@ Bundle-SymbolicName: com.openexchange.imap
 Bundle-Version: 7.4.0
 Bundle-Vendor: Open-Xchange Inc.
 Import-Package: com.googlecode.concurrentlinkedhashmap,
+ com.javacodegeeks.concurrent,
  com.openexchange.api2,
  com.openexchange.caching,
  com.openexchange.concurrent,
